Verfügbarkeiten für räume Deadline prüfung Raumbelegungs-Kollisionen erkannen Tests aktualisiert